--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,14 +17,14 @@
 
 
 body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    overflow: auto;
 }
 
 /* Sticky footer styles */
 html {
-    position: relative;
-    min-height: 100%;
+   
+    height: 100%;
+    overflow: hidden;
 }
 
 .container {
